# Cheero

./: .gitignore  build.gradle  config.gradle  gradle.properties  gradlew  settings.gradle
CheeroSDK/src/main/jni/: CMakeLists.txt
CheeroSDK/src/main/jni/CheeroNative/: service_jni.cpp
CheeroSDK/src/main/jni/CheeroOS/inc/: os_porting.h
CheeroSDK/src/main/jni/CheeroOS/src/: os_memory.c  os_thread.c  os_timestamp.c
CheeroSDK/src/main/jni/CheeroService/: service_engine.h
CheeroSDK/src/main/jni/CheeroService/api/: service.c
CheeroSDK/src/main/jni/Native/: service_jni.cpp
CheeroSDK/src/main/jni/Service/api/: service.c
CheeroSDK/src/main/jni/Util/inc/: timer.h  trace.h  util.h
CheeroSDK/src/main/jni/Util/src/: timer.c  trace.c  util.c
CheeroSDK/src/main/jni/ZcyJNI/: ZcyServiceJNI.cpp
MainSDK/: CMakeLists.txt  build.gradle
MainSDK/src/androidTest/java/com/zuochengyao/sdk/: ExampleInstrumentedTest.java
MainSDK/src/main/: AndroidManifest.xml
MainSDK/src/main/java/com/icheero/sdk/basis/algorithm/: UnionFind.java
MainSDK/src/main/java/com/icheero/sdk/basis/algorithm/sort/: SelectSort.java
MainSDK/src/main/java/com/icheero/sdk/basis/datastructure/list/: MyQueue.java  Queue2Stack.java  Stack2Queue.java
MainSDK/src/main/java/com/icheero/sdk/basis/datastructure/tree/: BinaryTree.java
MainSDK/src/main/java/com/icheero/sdk/basis/designpattern/: DesignPatternMethods.java
MainSDK/src/main/java/com/icheero/sdk/basis/designpattern/adapter/: Guard.java  Translator.java
MainSDK/src/main/java/com/icheero/sdk/basis/designpattern/bridge/: ConcreteImpA.java
MainSDK/src/main/java/com/icheero/sdk/basis/designpattern/builder/: PersonThin.java
MainSDK/src/main/java/com/icheero/sdk/basis/designpattern/command/: Invoker.java
MainSDK/src/main/java/com/icheero/sdk/basis/designpattern/decorator/: Finery.java
MainSDK/src/main/java/com/icheero/sdk/basis/designpattern/facade/: Fund.java
MainSDK/src/main/java/com/icheero/sdk/basis/designpattern/factory/: Add.java  Div.java  Mul.java  Sub.java
MainSDK/src/main/java/com/icheero/sdk/basis/designpattern/iterator/: Aggregate.java  ConcreteAggregate.java  ConcreteIterator.java
MainSDK/src/main/java/com/icheero/sdk/basis/designpattern/mediator/: Country.java  Iraq.java  SecurityCouncil.java  USA.java
MainSDK/src/main/java/com/icheero/sdk/basis/designpattern/memento/: Caretaker.java  Memento.java  Originator.java
MainSDK/src/main/java/com/icheero/sdk/basis/designpattern/observer/: NBAObserver.java  StockObserver.java
MainSDK/src/main/java/com/icheero/sdk/basis/designpattern/prototype/: Resume.java  WorkExperience.java
MainSDK/src/main/java/com/icheero/sdk/basis/designpattern/proxy/: Pursuit.java
MainSDK/src/main/java/com/icheero/sdk/basis/designpattern/responsibility/: SuperiorLeader.java
MainSDK/src/main/java/com/icheero/sdk/basis/designpattern/state/: ForenoonState.java  NoonState.java  SleepingState.java
MainSDK/src/main/java/com/icheero/sdk/basis/designpattern/strategy/: CashBase.java
MainSDK/src/main/java/com/icheero/sdk/control/communication/: SmsManager.java
MainSDK/src/main/java/com/icheero/sdk/control/network/: IResponseListener.java
MainSDK/src/main/java/com/icheero/sdk/data/db/: DBDefine.java
MainSDK/src/main/java/com/icheero/sdk/util/: Log.java
MainSDK/src/main/java/com/zcy/sdk/base/algorithm/: UnionFind.java
MainSDK/src/main/java/com/zcy/sdk/basis/algorithm/: UnionFind.java
MainSDK/src/main/java/com/zcy/sdk/basis/designpattern/: DesignPatternMethods.java
MainSDK/src/main/java/com/zcy/sdk/communication/: OkHttpManager.java
MainSDK/src/main/java/com/zcy/sdk/communication/rest/: OkHttpManager.java  OkHttpUICallback.java
MainSDK/src/main/java/com/zcy/sdk/control/communication/: SmsManager.java
MainSDK/src/main/java/com/zcy/sdk/control/network/: IResponseListener.java
MainSDK/src/main/java/com/zcy/sdk/data/db/: DBDefine.java  DBHelper.java
MainSDK/src/main/java/com/zcy/sdk/engine/: ICamera.java  JniNative.java
MainSDK/src/main/java/com/zcy/sdk/interaction/media/: ICamera.java
MainSDK/src/main/java/com/zcy/sdk/media/: ICamera.java
MainSDK/src/main/java/com/zcy/sdk/ndk/: JniNative.java
MainSDK/src/main/java/com/zcy/sdk/util/: Common.java  FileUtils.java  Log.java
MainSDK/src/main/java/com/zuochengyao/sdk/engine/: ZcyNative.java
MainSDK/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  ZcyServiceJNI.cpp  com_zcy_sdk_engine_JniNative.h  com_zuochengyao_sdk_engine_ZcyNative.c  com_zuochengyao_sdk_engine_ZcyNative.h  jni.c  native_api.c
MainSDK/src/main/jni/Util/inc/: Trace.h  trace.h
MainSDK/src/main/jni/Util/src/: Trace.c  trace.c  util.c
MainSDK/src/main/jni/ZcyJNI/: ZcyServiceJNI.cpp
MainSDK/src/main/jni/ZcyService/: serviceEngine.h
MainSDK/src/test/java/com/zuochengyao/sdk/: ExampleUnitTest.java
(+1512 files in other folders)
